--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ main {
    Header
    =========================== */
 header {
-    border: 1px solid rgb(16, 16, 16);
+    border-bottom: 1px solid rgb(16, 16, 16);
     background-color: whitesmoke;
     position: fixed;
     width: 100%;
@@ -104,7 +104,7 @@ header p {
 }
 .header-mobile {
     position: absolute;
-    border-top: 1px solid rgb(16, 16, 16);
+    /* border-top: 1px solid rgb(16, 16, 16); */
     border-bottom: 1px solid rgb(16, 16, 16);    
     background-color: whitesmoke;
 }
@@ -605,7 +605,7 @@ main.a-project {
 }
 @media only screen and (max-width: 575px) {
     .rgb {
-        margin-top: 2px !important;
+        /* margin-top: 2px !important; */
     }
     .index-portfolio {
         height: calc(100svh - 71px);
@@ -687,7 +687,7 @@ footer {
     position: fixed;
     width: 100%;
     height: 36px;
-    z-index: 10000;
+    z-index: 1000000;
     bottom: 0; 
 }
 .borders {
