--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ body.previous_work_body {
 
 main {
     overflow-x: hidden;
-    min-height: 100vh;
+    min-height: 100svh;
 }
 
 .content-viewport {
