--- a/css/styles.css
+++ b/css/styles.css
@@ -176,10 +176,20 @@ header .header-big:hover .circulo, header .expanded.circulo { opacity: 1; }
 @keyframes volta {
     0% { margin-top: 0.10em; margin-left: -0.70em; }
     25% { margin-top: 0.10em; margin-left: -1.88em; }
-    50% { margin-top: -0.83em; margin-left: -1.88em; }
+    50% { margin-top: -0.85em; margin-left: -1.88em; }
     75% { margin-top: 0.10em; margin-left: -1.88em; }
     100% { margin-top: 0.10em; margin-left: -0.70em; }
 }
+@media only screen and (max-width: 991px) {
+    @keyframes volta {
+        0% { margin-top: -0.03em; margin-left: -0.70em; }
+        25% { margin-top: -0.03em; margin-left: -1.88em; }
+        50% { margin-top: -0.85em; margin-left: -1.88em; }
+        75% { margin-top: -0.03em; margin-left: -1.88em; }
+        100% { margin-top: -0.03em; margin-left: -0.70em; }
+    }
+}
+
 .cores {
     animation: clichet 10s infinite;
     width: 1.2rem;
@@ -623,7 +633,7 @@ main.a-project {
         height: 100svh;
     }
     .rgb {
-        transform: translateY(3px);
+        transform: translateY(4px);
     }
     .index-portfolio {
         height: calc(100svh - 71px);
